<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
   >

    <LinearLayout
        android:layout_marginBottom="100dp"
        android:fitsSystemWindows="true"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:background="@color/colorPrimaryDark"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.Toolbar
                app:title=""
                android:visibility="gone"
                android:id="@+id/toolbar"
                android:background="@color/colorPrimaryDark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:visibility="gone"
                    android:layout_marginRight="5dp"
                    android:layout_gravity="right"
                    android:padding="5dp"
                    android:background="@drawable/round_background"
                    android:src="@drawable/ic_launcher_background"
                    android:textColor="@android:color/white"
                    android:text="@string/app_name"
                    android:layout_width="60dp"
                    android:layout_height="30dp" />

            </android.support.v7.widget.Toolbar>

            <ProgressBar
                android:visibility="gone"
                android:layout_gravity="center"
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


            <TextView
                android:layout_marginBottom="4dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="20dp"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:text="@string/capture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


        </LinearLayout>


        <LinearLayout
            android:weightSum="1"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <View
                android:layout_gravity="center"
                android:layout_weight="0.3"
                android:background="@android:color/white"
                android:layout_width="0dp"
                android:layout_height="1dp"/>

            <TextView
                android:layout_weight="0.4"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:text="@string/photo"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

            <View
                android:layout_gravity="center"
                android:layout_weight="0.3"
                android:background="@android:color/white"
                android:layout_width="0dp"
                android:layout_height="1dp"/>


        </LinearLayout>

        <ImageView
            android:background="@android:color/white"
            android:id="@+id/photo"
            android:layout_marginTop="5dp"
            android:layout_gravity="center"
            android:src="@drawable/camera"
            android:layout_width="140dp"
            android:layout_height="168dp" />

        <LinearLayout
            android:weightSum="1"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <View
                android:layout_gravity="center"
                android:layout_weight="0.3"
                android:background="@android:color/white"
                android:layout_width="0dp"
                android:layout_height="1dp"/>

            <TextView
                android:layout_weight="0.4"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:text="@string/finger"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

            <View
                android:layout_gravity="center"
                android:layout_weight="0.3"
                android:background="@android:color/white"
                android:layout_width="0dp"
                android:layout_height="1dp"/>


        </LinearLayout>


        <ImageView
            android:padding="10dp"
            android:id="@+id/fingerPrint"
            android:layout_marginTop="5dp"
            android:layout_gravity="center"
            android:src="@drawable/finger"
            android:layout_width="200dp"
            android:layout_height="200dp" />


        <Button
            android:id="@+id/button"
            android:layout_marginRight="50dp"
            android:layout_marginLeft="50dp"
            android:background="@drawable/round_background"
            android:layout_marginTop="5dp"
            android:layout_gravity="center"
            android:text="Save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


    </LinearLayout>


</ScrollView>
